opa_gatekeeper/podsecurity/hostfilesystem.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: type
          operator: In
          values: [ "app" ]
  parameters:
    allowedHostPaths:
      - readOnly: true
        pathPrefix: "/conf"
